# beatbox-public

./: .gitignore  AUTHORS  DOWNLOAD  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  bbx_compile_hector.sh  bbx_compile_local.sh  configure  configure.ac  mydebug.sh  myrebuild.sh  svn_dist_version
data/: README
data/parameters/: fhn.par
data/scripts/BeatboxWorkshop/CRN_model/: pd_crn0.bbs  pd_crn1.bbs  pd_crn2.bbs
data/scripts/BeatboxWorkshop/FitzHughNagumo_model/: fhn0.bbs  fhn1.bbs  fhn2.bbs  fhn3.bbs  fhn3_PositiveTension.bbs  fhn_crossFieldStim_ffr_slice.bbs  fhn_ffr.bbs  fhn_ffr_iso.bbs  fhn_ffr_iso_xz.bbs  fhn_ffr_xz.bbs  fhn_spiral_ffr_slice.bbs  fhn_spiral_ffr_slice_aniso.bbs  inside.pl  surface.pl  view.pl  view_ffr.pl
data/scripts/BeatboxWorkshop/parallel_Hector/: fhn3_NegativeTension.bbs  fhn3_NegativeTension.pbs  fhn_ffr_xz_scaling.bbs
data/scripts/parallel/Barkley/: Makefile  scroll.bbs  view.pl
data/scripts/parallel/CRN_model/: crn_ffr.bbs
data/scripts/parallel/FitzHughNagumo_model/: fhn3_NegativeTension.bbs  fhn_ffr_xz.bbs  fhn_ffr_xz.pbs  fhn_ffr_xz_scaling.bbs  fhncub.par  sample.bbs
data/scripts/parallel_Hector/box3D/: bigboxFibers_scaling_crn.bbs  bigboxFibers_scaling_crn_bare.bbs  bigbox_crn.bbs  bigbox_crn.sh  bigbox_fhn.bbs  bigbox_fhn.sh  bigbox_lrd.bbs  bigbox_lrd.sh  bigbox_scaling_crn.bbs  br.par
data/scripts/parallel_Hector/phasedbn_parallel/: pd_crn0.rec  pd_crn1.rec  pd_crn2.bbs  submit_pdcrn2.sh
data/scripts/sequential/: RunTest.sh  ord0_ap.bbs
data/scripts/sequential/Barkley_model/: bkl1.rec  ez.bbs  ezscroll.bbs  ezspiral.bbs  implicit.bbs  rabbit.bbs  rabbit3.bbg  view.pl
data/scripts/sequential/BeelerReuter_model/: otg.bbs  tgo.bbs  tog.bbs
data/scripts/sequential/CRN_model/: compare1D.bbs  crn0.bbs  crn0_ap.bbs  crn0_rest.bbs  crn1.bbs  pd_crn0.bbs  pd_crn1.bbs  pd_crn2.bbs  pd_runcrn0.sh  pd_runcrn1.sh  pd_runcrn2.sh  restitutioncrn.sh  runcrn0.sh  runcrn1.sh
data/scripts/sequential/FentonKarma_model/: Makefile  fk0_ap.bbs  fk0_atrial.bbs  fk0_san.bbs  fk2_san.bbs
data/scripts/sequential/FitzHughNagumo_model/: RunTest.sh  ffr_slice.bbg  fhn.par  fhn0.bbs  fhn0.sh  fhn0_ap.bbs  fhn1.bbs  fhn1_NegativeTension.rec  fhn1_PositiveTension.rec  fhn1_load.bbs  fhn2.bbs  fhn3.bbs  fhn3_NegativeTension.bbs  fhn3_PositiveTension.bbs  fhn_crossFieldStim_ffr_slice.bbs  fhn_ffr.bbs  fhn_rabbit2012.bbs  fhn_spiral_ffr_slice.bbs  fhn_spiral_ffr_slice_aniso.bbs  singz.bbs  view.pl
data/scripts/sequential/LRD_model/: LRD_3d_box.bbs  LRD_ffr.bbs  LRD_ffr_slice.bbs  RunTest.sh  lrd.par  lrd0_ap.bbs
data/scripts/sequential/MitchellSchaeffer_model/: RunTest.sh  ms.par  ms0.bbs.0  ms1.bbs  ms1.bbs.0  ms1.dmp  ms2.bbs  ms2.bbs.0  ms2.bbs.1
data/scripts/sequential/RK4/: Makefile  rk4test-control.eps  rk4test-control.txt  rk4test.bbs  rk4test.eps  rk4test.gnu
data/scripts/sequential/TenTusscherPanfilov_modelS/: ttnnp04_ap.bbs  ttnp0.bbs  ttp06.bbs  ttp06_ap.bbs
data/scripts/sequential/TenTusscherPanfilov_modelS/ttp06/: 0.1_0.005.pgm  0.2.bbg  0.5.bbg  0.5_0.05.dat.other  0.5_0.05.pgm  Makefile  benchmark.bbs  colormap  colormap.c  colormap.ppm  dat2tex.pl  domain.pl  graph.eps  graph.gnu  lower.pgm  report.tex  table.tex  upper.pgm
data/scripts/sequential/TenTusscherPanfilov_modelS/ttp06/0.1_0.005.dat.dir/: actdiag.txt  activation.ppm
data/scripts/sequential/TenTusscherPanfilov_modelS/ttp06/0.1_0.01.dat.dir/: actdiag.txt  activation.ppm
data/scripts/sequential/TenTusscherPanfilov_modelS/ttp06/0.2_0.005.dat.dir/: actdiag.txt  activation.ppm
data/scripts/sequential/TenTusscherPanfilov_modelS/ttp06/0.2_0.01.dat.dir/: actdiag.txt  activation.ppm
data/scripts/sequential/TenTusscherPanfilov_modelS/ttp06/0.2_0.05.dat.dir/: actdiag.txt  activation.ppm
data/scripts/sequential/ZFK_model/: Makefile  square.pl  square_20.bbg  zfkbid2.bbs  zfkmon2.bbs
data/scripts/sequential/b02/: Makefile  fig5.bbs  fig5a.pgm  fig5b.pgm
data/scripts/sequential/hh52/: Makefile  hh52m.bbs
data/scripts/viz3d/: ppmz.task12
data/tests/: .gitignore  Makefile  README  admitfailure.c  ball.bbg  balld.bbs  balldcont.bbs  ballf.approx  ballf.bbs  ballfcont.bbs  bkl3.bbs  bkl3cont.bbs  br0.approx  br0.bbs  closeenough.c  declared.bbs  declared.errmsg  depth.bbs  depth.errmsg  diff0d.bbs  diff0d.errmsg  divzero.bbs  fhn.par  fhn0.approx  fhn0.bbs  fhn1.approx  fhn1.bbs  fhn2.approx  fhn2.bbs  fhn3.approx  fhn3.bbs  fhn3side-16.sortedapprox  fhn3side.approx  fhn3side.bbs  funcs.approx  funcs.bbg  funcs.bbs  hh52mrl.approx  hh52mrl.bbs  matout.bbs  (+16 more)
doc/: Ohara_Rudy_2011.c  Ohara_Rudy_2011.cellml  Ohara_Rudy_2011.h  README  ToC.js  bbg_howto.html  beatbox.html  beatbox_quickstart.html  docstyle.css  faq.html  ord.c  ord0.bbs  ord_init.h  ord_par.h  ord_step.h
src/: .gitignore  AP.on  B02.on  BZ.on  CGLE.on  COPYING  FHNBKL.on  FHNCUB.on  FK.on  FKMOD.on  FRONT.on  HA.on  HH.on  INSTALL  LRD.on  Makefile.am  Makefile.in  N62.on  NOBLE.on  PLANKTON.on  README  ZEEMAN.on  ZFK.on  activation.c  adi3d.c  ap.c  b02.c  bbxd.c  beatbox.c  beatbox.h  bgi.c  bgi.h  bikt.c  bikt.h  br77.c  br77_const.h  br77_fddt.h  br77_ftab.h  br77_fun.h  br77_ngate.h  (+283 more)
src/gsl-1.16.extract/: .gitignore  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
src/gsl-1.16.extract/blas/: Makefile.in  blas.c
src/gsl-1.16.extract/block/: Makefile.am  Makefile.in
src/gsl-1.16.extract/cblas/: Makefile.am  Makefile.in
src/gsl-1.16.extract/complex/: Makefile.am  Makefile.in  math.c
src/gsl-1.16.extract/eigen/: Makefile.am  Makefile.in  nonsymmv.c  schur.c  sort.c
src/gsl-1.16.extract/err/: Makefile.am  Makefile.in  error.c  stream.c
src/gsl-1.16.extract/gsl/: Makefile.in
src/gsl-1.16.extract/linalg/: Makefile.am  Makefile.in  hessenberg.c  householder.c
src/gsl-1.16.extract/matrix/: Makefile.am  Makefile.in  init.c
src/gsl-1.16.extract/sys/: Makefile.am  Makefile.in  hypot.c  infnan.c
src/gsl-1.16.extract/utils/: Makefile.in
src/gsl-1.16.extract/vector/: Makefile.am  Makefile.in  init.c
(+6 files in other folders)
